@@ -3,6 +3,7 @@
 
 #define MAX_PORTS 64
 #define SEQPOOL 2048
+#define LFO_FRAMESIZE 256
 #define MAXNOTES 128
 #define TICKS_PER_QUARTER 192
 #define MAXCHORD  33
